# ChangeLog for media-sound/quimup
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/quimup/ChangeLog,v 1.4 2011/03/19 11:11:28 angelos Exp $

  19 Mar 2011; Christoph Mende <angelos@gentoo.org> -quimup-1.1.0.ebuild,
  -quimup-1.1.1.ebuild:
  Removed old

*quimup-1.2.0 (18 Feb 2011)

  18 Feb 2011; <angelos@gentoo.org> +quimup-1.2.0.ebuild:
  Version bump

*quimup-1.1.1 (27 Jun 2010)

  27 Jun 2010; Christoph Mende <angelos@gentoo.org> +quimup-1.1.1.ebuild:
  Version bump

*quimup-1.1.0 (03 Jun 2010)

  03 Jun 2010; Christoph Mende <angelos@gentoo.org> +quimup-1.1.0.ebuild,
  +metadata.xml:
  Initial import
