@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST quimup_1.2.0_source.tar.gz 231147 RMD160 a5529d9c4b51fb1d946293ba5d792865f2ea0f56 SHA1 c70ab91685c26a3e4d8b08d153f2393d594efaa4 SHA256 194632a593df5c326222d61cd12fd2d0fa96438e25bf79efc82877070e12ebac
-EBUILD quimup-1.2.0.ebuild 722 RMD160 fdf1028a63302f9ea42e5aa9911a62b4e2d61407 SHA1 581ade72c77f02b02770bed402ad229e9acd7c7b SHA256 d7c690d47be19e93ca126c0f6baf09b680ccbd1e3908726b08ccae128935c771
-MISC ChangeLog 683 RMD160 7759c59e6f59c8792f01d6d0f26082d0ed7e5e10 SHA1 fc0a074f7bc075b5334f5aaa756340e40a0fdee9 SHA256 7611c9aa1fd6f04a3515d8d162d8e043315d30e25a6009b2cd94f37500da1c9e
+EBUILD quimup-1.2.0.ebuild 773 RMD160 1a94ade61cd71fed5876deaf260555eaf8c37def SHA1 80228518ce8ba10fa8189c0d617bd58cc8457c69 SHA256 d6f7b7faf8fb00429ea3581798388d00e900f6865471171ff535799ff2b0ddb8
+MISC ChangeLog 791 RMD160 11dd08a3256baee635294a59b1dd25057d5d428f SHA1 9882263168573a34e94dcfb17d2ac938b8b9dbb5 SHA256 f43b623e180d56785a030a33e812519406e36d92f130fa55b787bc3a2fa1ab41
 MISC metadata.xml 262 RMD160 0fb4de0f9789081931582f70c195617bbbc10b8e SHA1 d9c44db61ecd23274540cd7c15f99e7cb90e2f40 SHA256 31f096f108bb82a82d303e7e3eeab166e26ab164f526808780ac05be36e65d02
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2Ej04ACgkQmWq1bYTyC0O92AD+LNQTKC9MNY3uFg43hTDE8Q/S
-4nN9P+u3e0XCDm/MsVQA/0aOun91cQUt30p3/pn9CxRVY5UQ4VsGV69iTnpeMJ6r
-=G9ei
+iF4EAREIAAYFAk2ElL0ACgkQmWq1bYTyC0M91AD/ZEOWpNTwHjf0jEGrwoATDfyh
+x8NPVPIK2LFhjUSPk4YBAJsz9e5RLoe5B5N523Btp2F9jwMEcqZHFxjA9fGZkn1U
+=s5f9
 -----END PGP SIGNATURE-----
