@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/quimup
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/quimup/ChangeLog,v 1.4 2011/03/19 11:11:28 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/quimup/ChangeLog,v 1.5 2011/03/19 11:34:38 angelos Exp $
+
+  19 Mar 2011; Christoph Mende <angelos@gentoo.org> quimup-1.2.0.ebuild:
+  Added die after sed/dobin/dodoc
 
   19 Mar 2011; Christoph Mende <angelos@gentoo.org> -quimup-1.1.0.ebuild,
   -quimup-1.1.1.ebuild:
